--- a/dashboard/src/assets/css/tab_default.css
+++ b/dashboard/src/assets/css/tab_default.css
@@ -29,7 +29,7 @@ div.center {
   font-weight: 600;
 }
 
-input[type=text] {
+input[type=text],input[type=password] {
   width: 100%;
   font-family: 'Orbitron', sans-serif;
   font-size: 2.5em;
